# python-library-template

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/python_library_template/: __init__.py
tests/: test_example.py
